# taskerslabgen

./: .gitignore  README.md  pyproject.toml
bulk_files/: IrO2_rutile.in  IrO2_rutile.out
example/: genslab.py
src/taskerslabgen/: __init__.py  builder.py  chargeparsers.py  core.py  plotting.py
